# research-work-5-ver2

./: CMakeLists.txt  README.md  customProvider.cpp  customProvider.hpp  g_params.cpp  g_params.hpp
Client/: Client.cpp  Client.hpp  client.cpp
CtxFactory/: CtxFactory.cpp  CtxFactory.hpp
KuznechikAVX2/: KuznechikAVX2.cpp  KuznechikAVX2.hpp
KuznechikAVX512/: KuznechikAVX512.cpp  KuznechikAVX512.hpp
KuznechikContextAVX2/: KuznechikContextAVX2.cpp  KuznechikContextAVX2.hpp
KuznechikContextAVX512/: KuznechikContextAVX512.cpp  KuznechikContextAVX512.hpp
MagmaAVX2/: MagmaAVX2.cpp  MagmaAVX2.hpp
MagmaAVX512/: MagmaAVX512.cpp  MagmaAVX512.hpp
MagmaAVX512Reg/: MagmaAVX512Reg.cpp  MagmaAVX512Reg.hpp
MagmaContextAVX2/: MagmaContextAVX2.cpp  MagmaContextAVX2.hpp
MagmaContextAVX512/: MagmaContextAVX512.cpp  MagmaContextAVX512.hpp
MagmaContextAVX512Reg/: MagmaContextAVX512Reg.cpp  MagmaContextAVX512Reg.hpp
Server/: Server.cpp  Server.hpp  server.cpp
Structures/: CMakeLists.txt  Structures.cpp  Structures.hpp
generateFile/: generateFile.cpp  test1  test10  test2  test3  test4  test5  test6  test7  test8  test9
libprov/include/prov/: num.h
speedTests/: speedTests.cpp
tables/: table2X65536.hpp  table4X256.hpp
